--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,11 +31,21 @@
       font-weight: 700;
       font-size: 2.2rem;
     }
+    #sub_2{
+      color: #92205d;
+    }
+    #sub_3{
+      color: #373637;
+    }
   </style>
 </head>
+
 <body>
   <!-- โลโก้ TPSO (ชื่อไฟล์ต้องอยู่ในโฟลเดอร์เดียวกับไฟล์นี้) -->
   <img src="./tpso_logo.png" alt="โลโก้ TPSO">
-  <h1>อยู่ระหว่างปรับปรุงเว็บไซต์</h1>
+  <h2>เว็บไซต์สำนักงานนโยบายและยุทธศาสตร์การค้า</h2>
+  <h1 id="sub_2">อยู่ระหว่างปรับปรุง ส่งผลให้ไม่สามารถให้บริการได้ในขณะนี้</h1>
+  <h2 id="sub_3">สนค. จึงขออภัยในความไม่สะดวกมา ณ โอกาสนี้</h2>
 </body>
+
 </html>
