--- a/index.html
+++ b/index.html
@@ -149,6 +149,12 @@
     <p>
       สำหรับข้อมูลดัชนีเศรษฐกิจการค้า สามารถเข้าดูได้ที่ <a href="https://index.tpso.go.th" target="_blank">index.tpso.go.th</a>
     </p>
+    <hr>
+    <p>
+       <img src="./qr.png" alt="โลโก้ TPSO">
+       <p>ภาวะการค้าระหว่างประเทศของไทยประจำเดือนมิถุนายน 2568 => <a target="_blank" href="https://drive.google.com/drive/folders/1Sdzd5mtGsvkpNXpYC0eRepPhXFtg6qCt">คลิกที่นี่</a></p>
+    </p>
+
   </div>
 </body>
 
