--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
       text-decoration: underline;
     }
 
+    #fix_ing{
+
+      width: 100;
+      height: 100;
+
+    }
+
     /* Animation สำหรับ Fade In */
     @keyframes fadeIn {
       from {
@@ -143,15 +150,15 @@
   <div class="container">
     <img src="./tpso_logo.png" alt="โลโก้ TPSO">
     <h2>เว็บไซต์สำนักงานนโยบายและยุทธศาสตร์การค้า</h2>
-    <h1>เว็บไซต์อยู่ระหว่างปรับปรุง</h1>
+    <h1>อยู่ระหว่างปรับปรุง</h1>
     <p>ไม่สามารถให้บริการได้ในขณะนี้ สนค. จึงขออภัยในความไม่สะดวกมา ณ โอกาสนี้</p>
-    <hr>
+
     <p>
       สำหรับข้อมูลดัชนีเศรษฐกิจการค้า สามารถเข้าดูได้ที่ <a href="https://index.tpso.go.th" target="_blank">index.tpso.go.th</a>
     </p>
     <hr>
     <p>
-       <img src="./qr.png" alt="โลโก้ TPSO">
+       <img id="fix_ing"  height="140" width="140"  src="./qr.png" alt="โลโก้ TPSO">
        <p>ภาวะการค้าระหว่างประเทศของไทยประจำเดือนมิถุนายน 2568 => <a target="_blank" href="https://drive.google.com/drive/folders/1Sdzd5mtGsvkpNXpYC0eRepPhXFtg6qCt">คลิกที่นี่</a></p>
     </p>
 
