--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
     </p>
     <hr>
     <p>
-       <img id="fix_ing"  height="140" width="140"  src="./qr.png" alt="โลโก้ TPSO">
-       <p>ภาวะการค้าระหว่างประเทศของไทยประจำเดือนมิถุนายน 2568 => <a target="_blank" href="https://drive.google.com/drive/folders/1Sdzd5mtGsvkpNXpYC0eRepPhXFtg6qCt">คลิกที่นี่</a></p>
+       <p style="color:#183D69">ประกาศ สนค. เรื่อง รายชื่อผู้มีสิทธิเข้ารับการประเมินความรู้ความสามารถ ทักษะ และสมรรถนะ (โดยวิธีการสัมภาษณ์) ในตำแหน่งนักวิชาการพาณิชย์ และกำหนดวัน เวลา สถานที่ในการประเมิน => <a target="_blank" href="0321.pdf">คลิกที่นี่</a></p>
     </p>
 
   </div>
