--- a/index.html
+++ b/index.html
@@ -5,162 +5,296 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>เว็บไซต์อยู่ระหว่างปรับปรุง - สนค.</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --primary-color: #92205d; /* สีหลัก (ม่วงแดง) */
-      --secondary-color: #3f3e3e; /* สีข้อความเข้ม */
-      --text-light-color: #6e6e6e; /* สีข้อความรอง */
-      --background-color: #f7f7f7; /* สีพื้นหลังอ่อน */
-      --border-color: #e0e0e0; /* สีเส้นแบ่ง */
+      --primary-color: #92205d;
+      --primary-dark: #6a1442;
+      --accent-color: #ffca28;
+      --text-main: #333333;
+      --text-secondary: #666666;
+      --bg-gradient-start: #fdfbfd;
+      --bg-gradient-end: #f4eef2;
+    }
+
+    * {
+      box-sizing: border-box;
     }
 
     body {
       margin: 0;
-      background-color: var(--background-color);
+      padding: 0;
       font-family: 'Kanit', sans-serif;
+      background: linear-gradient(135deg, #fff5fa 0%, #f4eef5 100%);
+      min-height: 100vh;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      text-align: center;
-      padding: 30px; /* เพิ่ม padding เพื่อป้องกันเนื้อหาติดขอบ */
-      box-sizing: border-box; /* รวม padding ในความสูง/กว้าง */
+      color: var(--text-main);
+    }
+
+    .background-shape {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      z-index: -1;
+    }
+
+    .shape {
+      position: absolute;
+      border-radius: 50%;
+      filter: blur(80px);
+      opacity: 0.6;
+    }
+
+    .shape-1 {
+      top: -10%;
+      left: -5%;
+      width: 500px;
+      height: 500px;
+      background-color: rgba(146, 32, 93, 0.15);
+      animation: float 20s infinite ease-in-out;
+    }
+
+    .shape-2 {
+      bottom: -10%;
+      right: -5%;
+      width: 400px;
+      height: 400px;
+      background-color: rgba(100, 100, 200, 0.1);
+      animation: float 25s infinite ease-in-out reverse;
     }
 
     .container {
-      background-color: #ffffff;
-      border-radius: 15px; /* มุมโค้งมน */
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); /* เงาที่ชัดเจนขึ้น */
-      padding: 50px 30px;
-      max-width: 620px; /* จำกัดความกว้างสูงสุด */
-      width: 95%; /* ทำให้ยืดหยุ่นตามหน้าจอ */
-      box-sizing: border-box;
+      background: rgba(255, 255, 255, 0.85);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+      border-radius: 24px;
+      box-shadow: 0 20px 60px rgba(146, 32, 93, 0.1), 0 1px 1px rgba(255, 255, 255, 0.5) inset;
+      padding: 60px 40px;
+      max-width: 680px;
+      width: 90%;
+      text-align: center;
+      border: 1px solid rgba(255, 255, 255, 0.6);
+      transform: translateY(0);
+      transition: transform 0.3s ease;
+      animation: slideUp 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
     }
 
-    img {
-      max-width: 250px; /* ปรับขนาดโลโก้เล็กน้อย */
+    .container:hover {
+      transform: translateY(-5px);
+    }
+
+    img.logo {
+      max-width: 220px;
       height: auto;
       margin-bottom: 30px;
-      animation: fadeIn 1s ease-out; /* เพิ่ม Animation */
-    }
-
-    h1 {
-      color: var(--primary-color);
-      font-weight: 700;
-      font-size: 2.2rem; /* ขนาดใหญ่ขึ้นเล็กน้อย */
-      margin-bottom: 15px;
-      line-height: 1.3;
+      filter: drop-shadow(0 4px 6px rgba(0, 0, 0, 0.05));
     }
 
     h2 {
-      color: var(--secondary-color);
-      font-weight: 500; /* น้ำหนักฟอนต์ปานกลาง */
-      font-size: 1.5rem; /* ขนาดใหญ่ขึ้นเล็กน้อย */
-      margin-bottom: 10px;
+      font-size: 1.25rem;
+      font-weight: 500;
+      color: var(--text-secondary);
+      margin: 0 0 10px;
+      letter-spacing: 0.5px;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: var(--primary-color);
+      margin: 0 0 24px;
+      line-height: 1.2;
+      background: linear-gradient(45deg, var(--primary-color), #b83b7e);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
 
     p {
-      color: var(--text-light-color);
       font-size: 1.1rem;
-      line-height: 1.6;
-      margin-top: 0;
-      margin-bottom: 25px;
+      line-height: 1.7;
+      color: var(--text-secondary);
+      margin-bottom: 1.5rem;
     }
 
-    hr {
-      border: none;
-      border-top: 1px solid var(--border-color);
-      margin: 30px auto; /* เพิ่มระยะห่าง */
-      width: 70%; /* ความยาวของเส้น */
+    .message-box {
+      background-color: rgba(146, 32, 93, 0.04);
+      border-radius: 12px;
+      padding: 20px;
+      margin: 30px 0;
+      border: 1px solid rgba(146, 32, 93, 0.1);
+    }
+
+    .message-box p {
+      margin: 0;
+      font-size: 1.05rem;
+      color: var(--primary-dark);
     }
 
     a {
       color: var(--primary-color);
       text-decoration: none;
       font-weight: 600;
-      transition: color 0.3s ease; /* เพิ่ม Transition */
+      position: relative;
+      transition: color 0.2s ease;
+    }
+
+    a::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      bottom: -2px;
+      left: 0;
+      background-color: var(--primary-color);
+      transform: scaleX(0);
+      transform-origin: bottom right;
+      transition: transform 0.3s ease-out;
     }
 
     a:hover {
-      color: #7a1b4e; /* สีเข้มขึ้นเมื่อ hover */
-      text-decoration: underline;
+      color: var(--primary-dark);
     }
 
-    #fix_ing{
-
-      width: 100;
-      height: 100;
-
+    a:hover::after {
+      transform: scaleX(1);
+      transform-origin: bottom left;
     }
 
-    /* Animation สำหรับ Fade In */
-    @keyframes fadeIn {
+    .btn-link {
+      display: inline-block;
+      margin-top: 5px;
+      padding: 10px 20px;
+      background-color: var(--primary-color);
+      color: white !important;
+      border-radius: 50px;
+      font-weight: 500;
+      box-shadow: 0 4px 15px rgba(146, 32, 93, 0.2);
+      transition: all 0.3s ease;
+    }
+
+    .btn-link::after {
+      display: none;
+    }
+
+    .btn-link:hover {
+      background-color: var(--primary-dark);
+      transform: translateY(-2px);
+      box-shadow: 0 6px 20px rgba(146, 32, 93, 0.3);
+      color: white !important;
+      text-decoration: none;
+    }
+
+    hr {
+      border: none;
+      height: 1px;
+      background: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.1), transparent);
+      margin: 30px 0;
+    }
+
+    .announcement {
+      font-size: 0.95rem;
+      margin-top: 20px;
+      color: #555;
+    }
+
+    /* Animations */
+    @keyframes slideUp {
       from {
         opacity: 0;
-        transform: translateY(-20px);
+        transform: translateY(40px);
       }
+
       to {
         opacity: 1;
         transform: translateY(0);
       }
     }
 
-    /* Media Queries สำหรับ Responsive Design */
+    @keyframes float {
+
+      0%,
+      100% {
+        transform: translate(0, 0);
+      }
+
+      50% {
+        transform: translate(20px, -20px);
+      }
+    }
+
+    /* Responsive */
     @media (max-width: 768px) {
-      h1 {
-        font-size: 1.8rem;
-      }
-      h2 {
-        font-size: 1.2rem;
-      }
-      p {
-        font-size: 1rem;
-      }
-      img {
-        max-width: 200px;
-      }
       .container {
-        padding: 40px 20px;
+        padding: 40px 25px;
+        width: 85%;
+      }
+
+      h1 {
+        font-size: 2rem;
+      }
+
+      h2 {
+        font-size: 1.1rem;
+      }
+
+      img.logo {
+        max-width: 180px;
       }
     }
 
     @media (max-width: 480px) {
-      h1 {
-        font-size: 1.5rem;
-      }
-      h2 {
-        font-size: 1rem;
-      }
-      p {
-        font-size: 0.9rem;
-      }
-      img {
-        max-width: 150px;
-      }
       .container {
-        padding: 40px 20px;
+        padding: 30px 20px;
+        width: 92%;
+      }
+
+      h1 {
+        font-size: 1.75rem;
+      }
+
+      p {
+        font-size: 1rem;
       }
     }
   </style>
 </head>
 
 <body>
+  <div class="background-shape">
+    <div class="shape shape-1"></div>
+    <div class="shape shape-2"></div>
+  </div>
+
   <div class="container">
-    <img src="./tpso_logo.png" alt="โลโก้ TPSO">
+    <img src="./tpso_logo.png" alt="โลโก้ TPSO" class="logo">
+
     <h2>เว็บไซต์สำนักงานนโยบายและยุทธศาสตร์การค้า</h2>
     <h1>อยู่ระหว่างปรับปรุง</h1>
-    <p>ไม่สามารถให้บริการได้ในขณะนี้ สนค. จึงขออภัยในความไม่สะดวกมา ณ โอกาสนี้</p>
 
-    <p>
-      สำหรับข้อมูลดัชนีเศรษฐกิจการค้า สามารถเข้าดูได้ที่ <a href="https://index.tpso.go.th" target="_blank">index.tpso.go.th</a>
-    </p>
+    <p>ขณะนี้ระบบไม่สามารถให้บริการได้ ทางเรากำลังเร่งดำเนินการปรับปรุง<br>ขออภัยในความไม่สะดวกมา ณ โอกาสนี้</p>
+
+    <div class="message-box">
+      <p>
+        สำหรับข้อมูลดัชนีเศรษฐกิจการค้า สามารถเข้าดูได้ที่<br>
+        <a href="https://index.tpso.go.th" target="_blank"
+          style="font-size: 1.1em; margin-top: 8px; display: inline-block;">index.tpso.go.th</a>
+      </p>
+    </div>
+
     <hr>
-    <p>
-       <p style="color:#183D69">ประกาศ สนค. เรื่อง รายชื่อผู้มีสิทธิเข้ารับการประเมินความรู้ความสามารถ ทักษะ และสมรรถนะ (โดยวิธีการสัมภาษณ์) ในตำแหน่งนักวิชาการพาณิชย์ และกำหนดวัน เวลา สถานที่ในการประเมิน => <a target="_blank" href="0321.pdf">คลิกที่นี่</a></p>
-    </p>
 
+    <div class="announcement">
+      <p style="margin-bottom: 10px; color: #183D69; font-weight: 500;">
+        ประกาศ สนค. เรื่อง รายชื่อผู้มีสิทธิเข้ารับการประเมินความรู้ความสามารถ ทักษะ และสมรรถนะ (โดยวิธีการสัมภาษณ์)
+        ในตำแหน่งนักวิชาการพาณิชย์ และกำหนดวัน เวลา สถานที่ในการประเมิน
+      </p>
+      <a target="_blank" href="0321.pdf" class="btn-link">ดาวน์โหลดเอกสาร (PDF)</a>
+    </div>
   </div>
 </body>
 
