--- a/index.html
+++ b/index.html
@@ -290,10 +290,10 @@
 
     <div class="announcement">
       <p style="margin-bottom: 10px; color: #183D69; font-weight: 500;">
-        ประกาศ สนค. เรื่อง รายชื่อผู้มีสิทธิเข้ารับการประเมินความรู้ความสามารถ ทักษะ และสมรรถนะ (โดยวิธีการสัมภาษณ์)
-        ในตำแหน่งนักวิชาการพาณิชย์ และกำหนดวัน เวลา สถานที่ในการประเมิน
+        ประกาศ สนค. เรื่อง รายชื่อผู้มีสิทธิเข้าสอบแข่งขันเพื่อวัดความเหมาะสมกับตำแหน่งนักวิชาการพาณิชย์ปฏิบัติการ
+        (ปริญญาโท) และกำหนดวัน เวลา สถานที่สอบ และระเบียบเกี่ยวกับการสอบ
       </p>
-      <a target="_blank" href="0321.pdf" class="btn-link">ดาวน์โหลดเอกสาร (PDF)</a>
+      <a target="_blank" href="a_02.pdf" class="btn-link">ดาวน์โหลดเอกสาร (PDF)</a>
     </div>
   </div>
 </body>
